--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@ body {
 }
 
 </style>
-
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vRYfweUBXcFY0bTBbfU2rlhIc08GhoGyFran3vlkn3xfqNqvr5NotMRWACzdMUNvUwdsuqx0hLeRPgj/pub?embedded=true"></iframe>
 <div class="clover">
   <div class="corgi">
     <div class="ears">
